--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,44 @@
+* {
+  box-sizing: border-box;
+}
+*,
+html {
+  padding: 0;
+  margin: 0;
+}
+html,
 body {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+}
+body {
+  min-width: 320px;
+  display: block;
+  background-color: #fff;
+  color: #777;
+  /* background-color: #ececec; */
+}
+ul {
+  list-style-type: none;
+  margin: 5px;
+  padding: 5px;
+}
+a,
+a:visited,
+a:hover,
+a:link,
+a:focus,
+a:active {
+  /* all: unset; */
+  /* color: inherit; */
+  text-decoration: none;
+}
+h2 {
+  font-size: 1.5em;
+  line-height: 1.5em;
+}
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -10,4 +50,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
+} */
