--- a/src/css/base.css
+++ b/src/css/base.css
@@ -13,7 +13,6 @@
   width: 100%;
   height: 590px;
   position: relative;
-  z-index: -1;
 }
 
 .hero {
@@ -148,6 +147,8 @@ section#primary a {
   margin: 10px auto 0 auto;
   padding: 5px;
   width: 7em;
+  cursor: pointer !important;
+  position: relative;
 }
 
 @media (min-width: 840px) {
